fix(UserOnboarded): generate api key after user onboarded