@@ -1,7 +1,6 @@
 package app.bpartners.api.unit.service;
 
-import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
@@ -9,6 +8,7 @@ import app.bpartners.api.endpoint.event.EventProducer;
 import app.bpartners.api.endpoint.event.model.UserAnalysisApiKeyRequested;
 import app.bpartners.api.endpoint.event.model.UserOnboarded;
 import app.bpartners.api.model.*;
+import app.bpartners.api.repository.UserRepository;
 import app.bpartners.api.service.aws.SesService;
 import app.bpartners.api.service.customer.UserCustomerConverter;
 import app.bpartners.api.service.event.UserOnboardedService;
@@ -17,6 +17,7 @@ import app.bpartners.api.service.utils.TemplateResolverEngine;
 import java.util.List;
 import lombok.SneakyThrows;
 import org.junit.jupiter.api.Test;
+import org.mockito.ArgumentCaptor;
 import org.thymeleaf.context.Context;
 
 class UserOnboardedServiceTest {
@@ -25,21 +26,24 @@ class UserOnboardedServiceTest {
   SubscriptionService subscriptionServiceMock = mock();
   UserCustomerConverter userCustomerConverterMock = mock();
   EventProducer eventProducerMock = mock();
+  UserRepository userRepositoryMock = mock();
   UserOnboardedService subject =
       new UserOnboardedService(
           mailerMock,
           engineMock,
           subscriptionServiceMock,
           userCustomerConverterMock,
-          eventProducerMock);
+          eventProducerMock,
+          userRepositoryMock);
 
   @SneakyThrows
   @Test
   void notify_email_and_register_user_subscription() {
-    var userMock = mock(User.class);
+    var user = User.builder().build();
     var accountMock = mock(Account.class);
     var accountHolderMock = mock(AccountHolder.class);
-    when(userCustomerConverterMock.apply(userMock)).thenReturn(mock(Customer.class));
+    when(userCustomerConverterMock.apply(user)).thenReturn(mock(Customer.class));
+    when(userRepositoryMock.save(any())).thenAnswer(invocation -> invocation.getArgument(0));
 
     var emailRecipient = "recipient@email.com";
     var emailSubject = "subject";
@@ -47,7 +51,7 @@ class UserOnboardedServiceTest {
         UserOnboarded.builder()
             .onboardedUser(
                 OnboardedUser.builder()
-                    .onboardedUser(userMock)
+                    .onboardedUser(user)
                     .onboardedAccount(accountMock)
                     .onboardedAccountHolder(accountHolderMock)
                     .build())
@@ -57,15 +61,21 @@ class UserOnboardedServiceTest {
 
     assertDoesNotThrow(() -> subject.accept(event));
 
-    verify(subscriptionServiceMock).createOrLinkUserSubscription(userMock);
+    var userCaptor = ArgumentCaptor.forClass(User.class);
+    verify(userRepositoryMock).save(userCaptor.capture());
+    var userWithApikeyCaptured = userCaptor.getValue();
+    assertNull(user.getApiKey());
+    assertNotNull(userWithApikeyCaptured.getApiKey());
+
+    verify(subscriptionServiceMock).createOrLinkUserSubscription(userWithApikeyCaptured);
     verify(engineMock).parseTemplateResolver(any(String.class), any(Context.class));
     verify(mailerMock).sendEmail(eq(emailRecipient), any(), eq(emailSubject), any(), any());
 
-    var eventCaptor = org.mockito.ArgumentCaptor.forClass(List.class);
+    var eventCaptor = ArgumentCaptor.forClass(List.class);
     verify(eventProducerMock).accept(eventCaptor.capture());
 
     var captured = (List<UserAnalysisApiKeyRequested>) eventCaptor.getValue();
     assertEquals(1, captured.size());
-    assertEquals(new UserAnalysisApiKeyRequested(userMock), captured.get(0));
+    assertEquals(new UserAnalysisApiKeyRequested(userWithApikeyCaptured), captured.getFirst());
   }
 }
